--- a/app/globals.css
+++ b/app/globals.css
@@ -53,7 +53,7 @@
 @layer base {
   * {
     @apply border-border;
-    --lk-grid-gap: 0;
+    --lk-grid-gap: 1rem;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
